--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.2",
     "react-headless-pagination": "^1.1.4",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^12.2.0",
     "react-markdown": "^8.0.6",
     "react-syntax-highlighter": "^15.5.0",
